// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert displays error message 1`] = `
<DocumentFragment>
  <div
    class="Alert alert-error"
  >
    Error!
  </div>
</DocumentFragment>
`;

exports[`Alert displays success message 1`] = `
<DocumentFragment>
  <div
    class="Alert alert-success"
  >
    Success!!!
  </div>
</DocumentFragment>
`;

exports[`Alert displays success message 2`] = `
<DocumentFragment>
  <div
    class="Alert alert-success"
  >
    Success!!!
  </div>
</DocumentFragment>
`;

exports[`Alert does not render is message is not truthy 1`] = `<DocumentFragment />`;

exports[`Alert does not render is message is not truthy 2`] = `<DocumentFragment />`;

exports[`displays a success message 1`] = `
<DocumentFragment>
  <div
    class="Alert alert-success"
  >
    Property Added
  </div>
</DocumentFragment>
`;

exports[`displays an error message 1`] = `
<DocumentFragment>
  <div
    class="Alert alert-error"
  >
    Error!
  </div>
</DocumentFragment>
`;

exports[`does not render an error or a success message if message props is empty 1`] = `<DocumentFragment />`;
